<resources>
    <string name="app_name">Carmem Coiffeur</string>
    <string name="action_settings">Settings</string>
    <string name="title_app">Carmem Coiffeur</string>
    <string name="data_text">Escolha a data</string>
    <string name="text_hour" />
    <string name="hora_text">Escolha o horário</string>
    <string name="marcar_text">Marcar</string>
    <string name="title_activity_splash_screen">Carmem Coiffeur</string>
    <string name="service_text">Procedimento</string>
    <string name="title_activity_view_services">ViewServicesActivity</string>
    <string name="title_activity_admin_controls">AdminControlsActivity</string>
    <string name="bem_vindo">Bem vindo ao</string>
    <string name="descricao_cabeleireira">Marque seus procedimentos com a melhor e mais conceituada cabeleireira do Paranoá.</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="como_funciona">Como funciona?</string>
    <string name="texto_criar_conta">Para nos conhecermos melhor e atendê-lo(a) da melhor forma, você necessita criar uma conta!</string>
    <string name="logar_google">Você pode se cadastrar com a sua conta do Google aqui!</string>
    <string name="logar_google_amend">É simples e fácil, só clicar no botão abaixo e escolher a conta</string>
    <string name="nova_conta_email">Ou você pode criar uma nova conta com email e senha!</string>
    <string name="facebook_app_id">205807869895942</string>
    <string name="credenciais_facebook">Ou se preferir, use suas credenciais do Facebook!</string>
    <string name="login_google">Logar-se com a sua conta Google</string>
    <string name="email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="cadastrar_email">Você pode se cadastrar com seu email</string>
    <string name="ou">Ou</string>


</resources>
