<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:src="@drawable/hairdresser"
        android:layout_gravity="center"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/logo" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_cabeleireira"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:textSize="22sp"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEntrar"
        android:text="@string/entrar"
        android:layout_margin="4dp"
        style="@style/RaisedButton"
        android:layout_gravity="center"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/btnCadastrar"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_margin="4dp"
        style="@style/RaisedButton.Entrar"
        android:layout_gravity="center"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_funciona"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        style="@style/ComoFunciona"/>


</LinearLayout>