<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wsadevv.com.carmemcoiffeur.auth.LoginProviderActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textoHeaderLoginID"
        android:layout_width="242dp"
        android:layout_height="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/emailID"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toBottomOf="@+id/textoHeaderLoginID"
        app:layout_constraintHorizontal_bias="0.473" />
    
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/passwordID"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:inputType="textPassword"
        android:hint="@string/hint_senha"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailID"
        app:layout_constraintHorizontal_bias="0.52" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="147dp"
        android:layout_height="48dp"
        style="@style/BorderLessButton"
        android:text="@string/entrar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordID"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/appCompatButton" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:id="@+id/appCompatTextView2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />





    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credenciais_facebook"
        android:id="@+id/appCompatTextView3"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInID"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginButtonFacebook"
        android:layout_width="254dp"
        android:layout_height="26dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
