<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wsadevv.com.carmemcoiffeur.auth.CadastrarActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/emailID"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAlignment="center"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        tools:layout_constraintLeft_creator="1" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_email"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/appCompatTextView5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textoIntroID"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/passwordID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_senha"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailID"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnActivityCadastrar"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintLeft_creator="1" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnActivityCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RaisedButton"
        android:text="@string/cadastrar"
        android:onClick="cadastrarEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView4"
        android:layout_marginTop="199dp"
        app:layout_constraintTop_toBottomOf="@+id/textoIntroID"
        android:layout_marginBottom="198dp" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/appCompatTextView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnActivityCadastrar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_criar_conta"
        android:id="@+id/textoIntroID"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logar_google"
        android:id="@+id/textoLoginGoogle"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credenciais_facebook"
        android:id="@+id/appCompatTextView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/cadastrarButtonFacebookID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="cadastrarFacebook"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/cadastrarGoogleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="cadastrarGoogle"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textoLoginGoogle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
