<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDataID"
        style="@style/RaisedButton"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/data_text"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="43dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:layout_constraintLeft_creator="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnHoraID"
        style="@style/RaisedButton"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:text="@string/hora_text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDataID"
        tools:layout_constraintLeft_creator="1" />


    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcar_text"
        style="@style/BorderLessButton"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/service_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/marcarID" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_layout"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHoraID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDataID"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/procedimentoID"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/service_text"
            android:inputType="text"
            android:textAlignment="center"/>
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>
